# sagemaker-python-sdk

./: .codecov.yml  .coveragerc  .dictionary  .flake8  .gitconfig  .gitignore  .gitmodules  .pydocstylerc  .pylintrc  .readthedocs.yaml  .readthedocs.yml  .rtd-environment.yml  .travis.yml  07-ml-model-development(1).ipynb  AGENTS.md  CHANGELOG.md  CHANGELOG.rst  CODEOWNERS  CONTRIBUTING.md  Config  LICENSE.txt  MANIFEST.in  NOTICE.txt  PyYAML-6.0.2-cp311-cp311-macosx_10_9_x86_64.whl  README.md  README.rst  VERSION  albatross_test.py  attrs-23.2.0-py3-none-any.whl  bedrock-modelbuilder-deployment-nova.ipynb  boto3-1.34.161-py3-none-any.whl  boto3_deployment_notebook.ipynb  buildspec-deploy.yml  buildspec-localmodetests.yml  buildspec-notebooktests.yml  buildspec-release.yml  buildspec-slowtests.yml  buildspec-unittests.yml  buildspec.yml  charset_normalizer-3.3.2-cp311-cp311-macosx_10_9_x86_64.whl  (+40 more)
aws-rft-sdk/: pyproject.toml
aws-rft-sdk/src/aws_rft_sdk/: __init__.py  client.py  context.py  handler.py
sagemaker-core/: .env  .pylintrc  .readthedocs.yaml  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  MANIFEST.in  VERSION  pyproject.toml  resource_plan.csv  tox.ini
sagemaker-core/docs/: conf.py  index.rst  make.bat  requirements.txt
sagemaker-core/example_notebooks/: get_started.ipynb  inference_and_resource_chaining.ipynb  intelligent_defaults_and_logging.ipynb  sagemaker-core-llama-3-8B-speculative-decoding.ipynb  sagemaker-core-llama-3-8B.ipynb  sagemaker_core_overview.ipynb  track_local_pytorch_experiment.ipynb
sagemaker-core/integ/: sagemaker_cleaner.py  test_codegen.py  test_endpoint_invoke.py
sagemaker-core/src/sagemaker/: __init__.py  algorithm.py  automl.py  base_predictor.py  estimator.py  model.py  multidatamodel.py  pipeline.py  predictor.py  predictor_async.py  processing.py  transformer.py  tuner.py
sagemaker-core/tests/integ/: integ_test_kms_helpers.py  kms_utils.py  s3_utils.py  test_session_wait_e2e.py
sagemaker-core/tests/unit/: conftest.py  test_accept_types.py  test_analytics.py  test_base_deserializers.py  test_clarify.py  test_codec.py  test_collection.py  test_common_utils.py  test_common_utils_tar_safety.py  test_compute_configs.py  test_constants.py  test_content_types.py  test_deserializer_implementations.py  test_drift_check_baselines.py  test_feature_store_lakeformation.py  test_fw_utils.py  test_git_utils.py  test_hyperparameters.py  test_image_retriever.py  test_image_retriever_utils.py  test_image_uris.py  test_inference_recommender_mixin.py  test_install_requirements.py  test_instance_group.py  test_iterators.py  test_job.py  test_jumpstart_types.py  test_jumpstart_types_coverage.py  test_jumpstart_types_extended.py  test_jumpstart_utils.py  test_lambda_helper.py  test_metadata_properties.py  test_metric_definitions.py  test_model_life_cycle.py  test_model_monitoring.py  test_model_registry.py  test_model_uris.py  test_modules_constants.py  test_optional_torch_dependency.py  test_payloads.py  (+17 more)
sagemaker-core/tst/tools/: test_api_coverage.py  test_resources_codegen.py
sagemaker-core/workflow_helper/: compute_boto_api_coverage.py  compute_resource_coverage.py
sagemaker-rft/: README.md  pyproject.toml
sagemaker-rft/src/sagemaker/: __init__.py
sagemaker-serve/: CHANGELOG.md  README.md  debug.ipynb  pyproject.toml  test_script.py  tox.ini
sagemaker-serve/example_notebooks/: bedrock_nova_deployment.ipynb
sagemaker-serve/src/sagemaker/: __init__.py
sagemaker-serve/test/unit/: __init__.py
sagemaker-serve/tests/integ/: cleanup_helpers.py  conftest.py  test_ai_inference_recommender_integration.py  test_bedrock_nova_e2e.py  test_bedrock_provisioned_throughput.py  test_huggingface_integration.py  test_ic_deploy_params_integration.py  test_in_process_integration.py  test_jumpstart_deploy_parity.py  test_jumpstart_integration.py  test_jumpstart_network_isolation.py  test_jumpstart_vllm_integration.py  test_model_customization_deployment.py  test_model_package_lora_detection.py  test_nova_model_customization_deployment.py  test_optimize_integration.py  test_private_hub_artifact_resolution.py  test_tei_integration.py  test_tgi_integration.py  test_train_inference_e2e_integration.py  test_triton_integration.py
sagemaker-serve/tests/unit/: __init__.py  constants.py  mb_user_test.py  run_all_tests.py  test_artifact_path_propagation.py  test_artifact_path_resolution.py  test_bedrock_model_builder.py  test_compute_requirements_resolution.py  test_configs.py  test_constants.py  test_deploy_passes_inference_config.py  test_deployment_observability.py  test_deployment_progress.py  test_deployment_progress_additional.py  test_fixtures.py  test_inference_config_parameter_handling.py  test_inference_recommendation_mixin.py  test_instance_type_inference.py  test_jumpstart_default_instance_type.py  test_local_resources.py  test_merged_model_deployment.py  test_model.py  test_model_builder.py  test_model_builder_advanced.py  test_model_builder_build.py  test_model_builder_checkpoint_changes.py  test_model_builder_core.py  test_model_builder_coverage_boost.py  test_model_builder_deploy.py  test_model_builder_integration.py  test_model_builder_methods.py  test_model_builder_missing_coverage.py  test_model_builder_servers.py  test_model_builder_servers_coverage.py  test_model_builder_servers_hf_model_id.py  test_model_builder_utils.py  test_model_builder_utils_additional.py  test_model_builder_utils_additional_gaps.py  test_model_builder_utils_coverage.py  test_model_builder_utils_extended_coverage.py  (+20 more)
sagemaker-train/: CHANGELOG.md  CONTRIBUTING.md  README.rst  pyproject.toml  tox.ini
sagemaker-train/example_notebooks/evaluate/: benchmark_demo.ipynb  custom_scorer_demo.ipynb  llm_as_judge_demo.ipynb
sagemaker-train/recipe_tests/: test_recipe_validation.py
sagemaker-train/src/sagemaker/: __init__.py
sagemaker-train/tests/integ/: __init__.py  conftest.py
sagemaker-train/tests/unit/: __init__.py  (+2 more)
sagemaker_train/: README.rst  pyproject.toml  tox.ini
sagemaker_utils/: CONTRIBUTING.md  MANIFEST.in  README.rst  coverage.xml  pyproject.toml  tox.ini
(+3585 files in other folders)
