[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "sagemaker"
dynamic = ["version"]
description = "Open source library for training and deploying models on Amazon SageMaker."
readme = "README.rst"
requires-python = ">=3.9"
authors = [
  { name = "Amazon Web Services" },
]
keywords = [
  "AI",
  "AWS",
  "Amazon",
  "ML",
  "MXNet",
  "Tensorflow",
  "PyTorch",
  "HuggingFace",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Natural Language :: English",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "sagemaker-core>=2.3.0,<3.0.0",
  "sagemaker-train>=1.3.0,<2.0.0",
  "sagemaker-serve>=1.3.0,<2.0.0",
  "sagemaker-mlops>=1.3.0,<2.0.0",
]

[project.optional-dependencies]
train = ["sagemaker-train"]
serve = ["sagemaker-serve"]
mlops = ["sagemaker-mlops"]
all = ["sagemaker-train", "sagemaker-serve", "sagemaker-mlops"]

[project.urls]
Homepage = "https://github.com/aws/sagemaker-python-sdk"

[tool.setuptools]
packages = []

[tool.setuptools.dynamic]
version = { file = "VERSION"}

[tool.pytest.ini_options]
addopts = ["-vv"]
testpaths = ["tests"]

[tool.black]
line-length = 100
