[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aws-rft-sdk"
version = "0.1.0"
description = "AWS Reinforcement Fine-Tuning SDK for online rollout-based training"
readme = {text = "", content-type = "text/markdown"}
requires-python = ">=3.9"
dependencies = [
    "boto3>=1.35.0",
]

[project.optional-dependencies]
strands = ["strands-agents>=0.1.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/aws_rft_sdk"]
