[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "sagemaker-core"
dynamic = ["version"]
description = "An python package for sagemaker core functionalities"
authors = [
  {name = "AWS", email = "sagemaker-interests@amazon.com"}
]
readme = "README.rst"
dependencies = [
  # Add your dependencies here (Include lower and upper bounds as applicable)
    "boto3>=1.35.75,<2.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "PyYAML>=6.0, <7.0",
    "jsonschema<5.0.0",
    "platformdirs>=4.0.0, <5.0.0",
    "rich>=13.0.0, <14.0.0",
    "mock>4.0, <5.0",
    "importlib-metadata<7.0,>=1.4.0",
]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
codegen = [
    "black>=24.3.0, <25.0.0",
    "pandas>=2.0.0, <3.0.0",
    "pytest>=8.0.0, <9.0.0",
    "pylint>=3.0.0, <4.0.0"
]

[project.urls]
Homepage = "https://github.com/aws/sagemaker-python-sdk"

[tool.black]
line-length = 100
exclude = '\.ipynb$'

[tool.setuptools.dynamic]
version = { attr = "sagemaker.core._version.__version__"}
