[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sagemaker-serve"
dynamic = ["version"]
description = "SageMaker Serve package for model serving and deployment"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Amazon Web Services"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "sagemaker-core>=2.3.0",
    "sagemaker-train>=1.3.0",
    "boto3>=1.42.2,<2.0",
    "botocore>=1.35.75,<2.0",
    "deepdiff",
    "mlflow",
    "sagemaker_schema_inference_artifacts",
    "pytest",
    "tqdm",
    "psutil",
    "tritonclient[http]",
    "onnx",
    "onnxruntime",
    "torch>=2.0.0"
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "mock",
]
dev = [
    "pytest",
    "pytest-cov", 
    "mock",
    "black",
    "flake8",
]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["sagemaker*"]
namespaces = true

[tool.setuptools.dynamic]
version = { file = "VERSION"}

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''
